# GOPH_420_Lab_03_St_ML

./: README.md  pyproject.toml
data/: M_data.txt
examples/: driver.py
src/lab_03/: regression.py
tests/: test_regression.py
