[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab02"
version = "0.0.1"
authors = [
{ name="Marc Laberge", email="marc.laberge@ucalgary.ca" },
]
description="Lab03 Python Package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: MIT",
]
[project.urls]
"Homepage" = "https://github.com/MarcLaBerge/GOPH_420_Lab_03_St_ML.git"